# tortoise-tts-api

./: .gitmodules  README.md  main.py  pyproject.toml
src/models/: voices.py
src/tts/: tortoise.py
