[tool.poetry]
name = "whore-voice"
version = "0.1.0"
description = ""
authors = ["Eliot Whalan <ewhal@pantsu.cat>"]
readme = "README.md"
packages = [{include = "whore_voice"}]

[tool.poetry.dependencies]
python = "^3.11"
sanic = "^23.3.0"
SQLAlchemy = "^2.0.17"
boto3 = "^1.26.160"
tortoise = {path = "tortoise-tts"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
